RESOLVED FIXED182701
Fix missing exception check in RegExpObject::matchGlobal().
https://bugs.webkit.org/show_bug.cgi?id=182701
Summary Fix missing exception check in RegExpObject::matchGlobal().
Mark Lam
Reported 2018-02-12 11:08:47 PST
patch coming.
Attachments
proposed patch. (1.72 KB, patch)
2018-02-12 11:18 PST, Mark Lam
no flags
Radar WebKit Bug Importer
Comment 1 2018-02-12 11:14:11 PST
Mark Lam
Comment 2 2018-02-12 11:18:57 PST
Created attachment 333609 [details] proposed patch.
Michael Saboff
Comment 3 2018-02-12 11:20:35 PST
Comment on attachment 333609 [details] proposed patch. r=me
Mark Lam
Comment 4 2018-02-12 12:03:24 PST
Comment on attachment 333609 [details] proposed patch. Thanks for the review.
WebKit Commit Bot
Comment 5 2018-02-12 12:28:07 PST
Comment on attachment 333609 [details] proposed patch. Clearing flags on attachment: 333609 Committed r228388: <https://trac.webkit.org/changeset/228388>
WebKit Commit Bot
Comment 6 2018-02-12 12:28:09 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.