Fix missing exception check in RegExpObject::matchGlobal(). https://bugs.webkit.org/show_bug.cgi?id=182701 <rdar://problem/37465865>

Reviewed by Michael Saboff.

This issue was discovered when running JSC tests on an asm LLInt build with
JSC_useJIT=false.

* runtime/RegExpObject.cpp:
(JSC::RegExpObject::matchGlobal):


Canonical link: https://commits.webkit.org/198498@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228388 268f45cc-cd09-0410-ab3c-d52691b4dbfc